<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MeteoActivity">

    <Button
            android:text="@string/meteo"
            android:layout_width="375dp"
            android:layout_height="73dp" android:id="@+id/meteo" tools:ignore="MissingConstraints"
            android:onClick="startAsyncTask" android:textSize="36sp" android:backgroundTint="#9CDDD8"/>
    <TextView
            android:text="@string/ville"
            android:layout_width="371dp"
            android:layout_height="53dp" android:id="@+id/textView2"
            android:textSize="30sp" android:textAlignment="center" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="2dp" android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/meteo"/>
    <TextView
            android:text="@string/temp_rature"
            android:layout_width="366dp"
            android:layout_height="57dp" android:id="@+id/textView3"
            android:textSize="36sp" android:textAlignment="center"
            android:layout_marginTop="91dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>